// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App displays misconfiguration error for admin user 1`] = `
<div>
  <under-construction-modal-stub />
   
  <board-without-any-columns-error-stub />
</div>
`;

exports[`App displays misconfiguration error for regular user 1`] = `
<div>
  <under-construction-modal-stub />
   
  <board-without-any-columns-error-stub />
</div>
`;

exports[`App displays the board when there are columns 1`] = `
<div>
  <under-construction-modal-stub />
   
  <task-board-stub
    columns="[object Object],[object Object]"
  />
</div>
`;
